--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@happy-dom/global-registrator": "^17.1.0",
+    "@sinonjs/fake-timers": "^14.0.0",
     "@testing-library/dom": "^10.4.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/sinonjs__fake-timers": "^8.1.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
